build: publish synaptik through jitpack